--- a/pom.xml
+++ b/pom.xml
@@ -17,29 +17,29 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<!-- Spring Boot Starter Data JPA -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<!-- MySQL Connector -->
 		<dependency>
-   			<groupId>mysql</groupId>
-    		<artifactId>mysql-connector-java</artifactId>
+   			 <groupId>mysql</groupId>
+   			 <artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<!-- Spring Boot Starter Test -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+  			  <groupId>org.springframework.boot</groupId>
+    		  <artifactId>spring-boot-starter-test</artifactId>
+  			  <scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+
 
 	<build>
 		<plugins>
