--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8080
 
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.dbcp2.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.dbcp2.url=jdbc:mysql://localhost:3306/stu?demo=UTC&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=Qq123456
+
+
+
+
+spring.mvc.hiddenmethod.filter.enabled=true
